// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component StatusBox should render StatusBox with less than 5 orders 1`] = `
<Styled(styled.div)
  borderRadius={2}
  boxShadow={1}
  marginBottom={2}
  padding={0}
  paddingTop={2}
>
  <Styled(Styled(styled.div))
    as="h2"
    fontSize={4}
    fontWeight={700}
    m={0}
  >
    My Order
  </Styled(Styled(styled.div))>
  <Styled(styled.div)
    as="ul"
    boxShadow={0}
    margin={0}
    paddingBottom={1}
    paddingLeft={0}
    paddingRight={0}
    paddingTop={1}
  >
    <Styled(styled.div)
      as="li"
      key="0"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Banana Split
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 119 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="1"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        McFlury
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 98 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="2"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Acai Bowl
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 35 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
  </Styled(styled.div)>
</Styled(styled.div)>
`;

exports[`Component StatusBox should render StatusBox with more than 5 orders 1`] = `
<Styled(styled.div)
  borderRadius={2}
  boxShadow={1}
  marginBottom={2}
  padding={0}
  paddingTop={2}
>
  <Styled(Styled(styled.div))
    as="h2"
    fontSize={4}
    fontWeight={700}
    m={0}
  >
    My Order
  </Styled(Styled(styled.div))>
  <Styled(styled.div)
    as="ul"
    boxShadow={0}
    margin={0}
    paddingBottom={1}
    paddingLeft={0}
    paddingRight={0}
    paddingTop={1}
  >
    <Styled(styled.div)
      as="li"
      key="0"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Banana Split
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 119 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="1"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        McFlury
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 98 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="2"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Acai Bowl
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 35 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="3"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Yogurt
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 105 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="4"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Chocolate Gelato
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 73 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
  </Styled(styled.div)>
  <Styled(styled.div)
    justifyContent="center"
  >
    <Button
      border={0}
      borderRadius={2}
      color="#6ab183"
      onClick={[Function]}
    >
      Show More
    </Button>
  </Styled(styled.div)>
</Styled(styled.div)>
`;

exports[`Component StatusBox should render StatusBox with more than 5 orders 2`] = `
<Styled(styled.div)
  borderRadius={2}
  boxShadow={1}
  marginBottom={2}
  padding={0}
  paddingTop={2}
>
  <Styled(Styled(styled.div))
    as="h2"
    fontSize={4}
    fontWeight={700}
    m={0}
  >
    My Order
  </Styled(Styled(styled.div))>
  <Styled(styled.div)
    as="ul"
    boxShadow={0}
    margin={0}
    paddingBottom={1}
    paddingLeft={0}
    paddingRight={0}
    paddingTop={1}
  >
    <Styled(styled.div)
      as="li"
      key="0"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Banana Split
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 119 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="1"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        McFlury
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 98 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="2"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Acai Bowl
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 35 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="3"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Yogurt
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 105 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="4"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Chocolate Gelato
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 73 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="5"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Cobb Salad
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 13 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="6"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Cottage Cheese
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 3 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="7"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Coke
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 119 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="8"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Snow Cone
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 49 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="9"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Pad See Ew
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 94 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
  </Styled(styled.div)>
  <Styled(styled.div)
    justifyContent="center"
  >
    <Button
      border={0}
      borderRadius={2}
      color="#6ab183"
      onClick={[Function]}
    >
      Show Less
    </Button>
  </Styled(styled.div)>
</Styled(styled.div)>
`;

exports[`Component StatusBox should render StatusBox with more than 5 orders 3`] = `
<Styled(styled.div)
  borderRadius={2}
  boxShadow={1}
  marginBottom={2}
  padding={0}
  paddingTop={2}
>
  <Styled(Styled(styled.div))
    as="h2"
    fontSize={4}
    fontWeight={700}
    m={0}
  >
    My Order
  </Styled(Styled(styled.div))>
  <Styled(styled.div)
    as="ul"
    boxShadow={0}
    margin={0}
    paddingBottom={1}
    paddingLeft={0}
    paddingRight={0}
    paddingTop={1}
  >
    <Styled(styled.div)
      as="li"
      key="0"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Banana Split
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 119 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="1"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        McFlury
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 98 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="2"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Acai Bowl
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 35 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="3"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Yogurt
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 105 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Styled(styled.div)
      as="li"
      key="4"
      onClick={[Function]}
    >
      <Styled(styled.div)
        color="#484848"
        fontSize={3}
        padding={0}
      >
        Chocolate Gelato
      </Styled(styled.div)>
      <Styled(styled.div)
        color="#7a7a7a"
        fontSize={2}
        padding={0}
        textAlign="right"
      >
        dispatch in 73 seconds
      </Styled(styled.div)>
    </Styled(styled.div)>
  </Styled(styled.div)>
  <Styled(styled.div)
    justifyContent="center"
  >
    <Button
      border={0}
      borderRadius={2}
      color="#6ab183"
      onClick={[Function]}
    >
      Show More
    </Button>
  </Styled(styled.div)>
</Styled(styled.div)>
`;

exports[`Component StatusBox should render StatusBox with no orders 1`] = `
<Styled(styled.div)
  borderRadius={2}
  boxShadow={1}
  marginBottom={2}
  padding={0}
  paddingTop={2}
>
  <Styled(Styled(styled.div))
    as="h2"
    fontSize={4}
    fontWeight={700}
    m={0}
  >
    My Order
  </Styled(Styled(styled.div))>
  <Styled(styled.div)
    as="ul"
    boxShadow={0}
    margin={0}
    paddingBottom={1}
    paddingLeft={0}
    paddingRight={0}
    paddingTop={1}
  >
    <Styled(styled.div)
      color="#7a7a7a"
      fontSize={3}
    >
      No 
      My Order
       orders
    </Styled(styled.div)>
  </Styled(styled.div)>
</Styled(styled.div)>
`;
